# os_learning

./: README.md
multi_thread_programming/: lab.h
multi_thread_programming/lesson11/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lesson11  lesson11.c  lesson11.h  multicpu_counter.h
multi_thread_programming/lesson5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lesson5  lesson5.c  lesson5.h  lesson5.md
multi_thread_programming/lesson6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lesson6  lesson6.c  lesson6.h
multi_thread_programming/lesson9/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lesson9  lesson9.c  lesson9.h  thread_sync.h
